ensure that membership lists on profile page wrap properly
that is, clear the CSS float after every third element to ensure the
next set of three is always on its own line

--- a/scss/modules.scss
+++ b/scss/modules.scss
@@ -180,6 +180,9 @@ ul.memberships {
             }
         }
     }
+    li:nth-child(3n+1) {
+        clear: both;
+    }
 }
 .communities {
     select {
